<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.opilane.snake_game.RegisterActivity">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnTeePilt"
        android:scaleType="fitCenter" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilt"
        android:id="@+id/btnTeePilt" />

    <EditText
        android:id="@+id/eesNimi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pereNimi"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/eesnimi"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorBlue"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="86dp" />

    <EditText
        android:id="@+id/pereNimi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/perenimi"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorBlue"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="132dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorBlue"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="179dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRegistreeri"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="43dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorBlue"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="223dp" />

    <Button
        android:id="@+id/btnRegistreeri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp"
        android:text="@string/registreerimine"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="270dp" />

</RelativeLayout>
